# oco_pfs_project

./: .gitignore  LICENSE  README.md  README_RU.md  pyproject.toml  requirements.txt  serve.py
configs/: logreg.yaml  toy.yaml
docs/: index.html
src/oco/: __init__.py  plot_results.py  run_experiment.py
src/oco/algorithms/: __init__.py  base.py  dpp.py  dppt.py  pfs.py  pogd.py
src/oco/problems/: __init__.py  online_logreg.py  toy_quadratic.py
src/oco/utils/: __init__.py  batch_opt.py  logging.py  projections.py  seeding.py  subgradients.py
src/results/logreg/: config_resolved.yaml  optimal_points.json
src/results/toy/: config_resolved.yaml  optimal_points.json
