[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oco-pfs"
version = "0.1.0"
description = "Constrained Online Convex Optimization - PFS vs Baselines"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0",
]

[project.scripts]
oco-run = "oco.run_experiment:main"
oco-plot = "oco.plot_results:main"